# SPY-DER

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
baseline/: system_a.lock.json
baseline/fixtures/: .gitkeep
baseline/manifests/: system_a_requirements.txt  system_a_tests.txt  system_a_tree.txt
deploy/: spy-der-shadow.service
docs/: ARCHITECTURE.md  CODEX_HANDOFF_STATE.md  COMPARISON_PROTOCOL.md  CONTRACT_CATALOG.md  CURRENT_SYSTEM_INVENTORY.md  DECISION_LIFECYCLE.md  IMPLEMENTATION_ROADMAP.md  MIGRATION_MAP.md  SAFETY_INVARIANTS.md  SOURCE_PROVENANCE.md  SPY_DER_MASTER_SPEC.md  SYSTEM_A_VS_SYSTEM_B.md
docs/ops/: APPLY_0DTE_PARALLEL_PANEL.md  SPY_DER_PARALLEL.md
integrations/zerodte/: 0dte-spy-der-parallel-panel.patch  PUSH_TO_0DTE.cmd
migrations/manifests/: ai-decision-authority.json  phase-0.json  phase-1.json  phase-10.json  phase-11.json  phase-12.json  phase-13.json  phase-14.json  phase-15.json  phase-16.json  phase-17.json  phase-2.json  phase-3.json  phase-4.json  phase-5.json  phase-6.json  phase-7.json  phase-8.json  phase-9.json
src/spy_der/: cli.py  interfaces.py
src/system_b/: __init__.py  interfaces.py
tests/: conftest.py  test_contracts.py  test_execution.py  test_replay.py  test_safety.py
tests/parity/: test_ai_authority_live_state.py  test_candidate_factory_parity.py  test_forecast_parity.py  test_legacy_parity.py  test_phase10_agent_parity.py  test_phase11_risk_parity.py  test_phase12_execution_parity.py  test_phase13_journal_parity.py  test_phase14_comparison_parity.py  test_phase15_deployment_parity.py  test_phase16_parity_report.py  test_phase17_cutover_parity.py  test_phase8_economics_parity.py  test_phase9_policy_parity.py  test_replay_parity.py  test_snapshot_parity.py  test_structural_parity.py  test_v3_forecast_parity.py
tests/unit/: test_ai_check.py  test_ai_decision_authority.py  test_dual_grok_review.py  test_features.py  test_grok_cost_controls.py  test_legacy.py  test_market_data.py  test_mtf_norm.py  test_phase10_agents.py  test_phase11_risk.py  test_phase12_execution.py  test_phase13_journal.py  (+14 more)
(+197 files in other folders)
