[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spy-der"
version = "0.1.0"
description = "SPY-DER System B — canonical platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "exchange-calendars>=4.5",
  "numpy>=1.26",
  "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "mypy>=1.11",
  "ruff>=0.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --cov=spy_der --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["spy_der"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["spy_der"]

[[tool.mypy.overrides]]
module = ["exchange_calendars.*", "pandas.*", "numpy.*"]
ignore_missing_imports = true
